--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,15 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>My First Dashboard</title>
+    <title>Stock predict Dashboard</title>
 </head>
 <body>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="chart" id="linegraph">
-            <div class="chart" id="linegraph2">
-            <div class="chart" id="linegraph3">
+    <div class="row" >
+        <div class="col-md-6" >
+            <div class="chart" id="linegraph" style="position: relative; height:40vh; width:40vw" >
+            <div class="chart" id="linegraph2" style="position: relative; height:40vh; width:40vw">
+            <div class="chart" id="linegraph3" style="position: relative; height:40vh; width:40vw">
 
             </div>
         </div>
