Updated to support dynamic number of values for P, Q, and S... new calling format : http://127.0.0.1:5000/line/10.35;3.4;0.57;0.12;-1;1;-2;2;297.5;280;260;240/C

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,12 @@
 <div class="container">
     <div class="row" >
         <div class="col-md-6" >
-            <div class="chart" id="linegraph" style="position: relative; height:40vh; width:40vw" >
-            <div class="chart" id="linegraph2" style="position: relative; height:40vh; width:40vw">
-            <div class="chart" id="linegraph3" style="position: relative; height:40vh; width:40vw">
+            <div class="text-header"><h1>{{title1}}</h1></div>
+            <div class="chart" id="linegraph" style="position: relative; height:50vh; width:40vw" >
+            <div class="text-header"><h1>{{title2}}</h1></div>
+                <div class="chart" id="linegraph2" style="position: relative; height:50vh; width:40vw">
+            <div class="text-header"><h1>{{title3}}/<h1></div>
+            <div class="chart" id="linegraph3" style="position: relative; height:50vh; width:40vw">
 
             </div>
         </div>
